# api/app/serializers/order_item_serializer.rb
@@ -1,5 +1,5 @@
 # frozen_string_literal: true
 
 class OrderItemSerializer < Panko::Serializer
-  attributes :id, :code, :product, :price, :quantity, :ean_code, :status, :admin_feedback, :order_id
+  attributes :id, :code, :product, :price, :quantity, :ean_code, :order_id
 end
