# api/app/serializers/order_serializer.rb
@@ -1,5 +1,5 @@
 # frozen_string_literal: true
 
 class OrderSerializer < Panko::Serializer
-  attributes :id, :name, :company_id
+  attributes :id, :status, :admin_feedback, :company_id
 end
